--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -59,7 +59,7 @@ img{
         - Add a background image "header-img.jpg"
         make sure that the path to the image is correct
     */
-
+    background-image: url("../ibeer_starter_files/img/header-img.jpg");
     background-size: cover;
     background-position: right bottom;
 }
