Added Dancing Script Font

--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -80,6 +80,7 @@ img{
         TODO:
         - Use the script font: 'Dancing Script' fot this text
     */
+    font-family: 'Dancing Script', cursive;
 }
 #main-navigation{
     background: #444;
