--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -186,6 +186,11 @@ article img{
         - Float article images to the right
         and match sizes and spacing to the mockup
     */
+    width: 50%;
+    height: auto;
+    float: right;
+    padding-left: 10%;
+    padding-bottom: 10%;
 }
 article footer p{
     /*
