--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -38,7 +38,7 @@ img{
     */
     display: flex;
     flex-flow: row wrap;
-    align-items: flex-start;
+    align-items: stretch;
     justify-content: center;
 }
 #site-header{
@@ -144,8 +144,6 @@ aside{
     width: 200px;
     display: flex;
     flex-flow: column wrap;
-
-
 }
 aside h3{
     text-align: center;
@@ -198,6 +196,18 @@ article footer p{
         - Style the article footer
         HINT: Look to the article header;
     */
+    line-height: 1em;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px 0 0 0;
+    padding: 10px 0 0 0;
+    border-top: 1px solid #ccc;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    text-align: center;
+    display: block;
+    margin-bottom: 30px;
+    color: #666;
 }
 #site-footer{
 
@@ -206,4 +216,7 @@ article footer p{
         TODO:
         - Style the site footer
     */
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
