--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -16,6 +16,9 @@ body{
     line-height: 1.8;
     margin: 0;
     background-color: #eeebda;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 h1, h2, h3{
     font-family: "Josefin Sans", sans-serif;
@@ -219,4 +222,5 @@ article footer p{
     color: white;
     text-align: center;
     padding: 10px;
+    width: 100%;
 }
